<resources>
    <string name="app_name">StudService</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="tags">Tags</string>
    <string name="userServicesFragmentBottomNavigationMenu">My Services</string>
    <string name="servicesFragmentBottomNavigationMenu">Services</string>
    <string name="profileFragmentBottomNavigationMenu">Profile</string>
    <string name="fragment_auth__sign_in__text">Sign In</string>
    <string name="fragment_auth__sign_in__login">Login</string>
    <string name="fragment_auth__sign_in__button">Sign in</string>
    <string name="fragment_auth__sign_in__link">Don`t have an account? Sign up</string>
    <string name="fragment_auth__sign_up__text">Sign Up</string>
    <string name="fragment_auth__sign_up__username">Username</string>
    <string name="fragment_auth__sign_up__email">E-mail</string>
    <string name="fragment_auth__sign_up__password">Password</string>
    <string name="fragment_auth__sign_up__password_again">Password again</string>
    <string name="fragment_auth__sign_up__button">Sign Up</string>
    <string name="fragment_main__filters__checkbox_study">Helping with studying</string>
    <string name="fragment_main__filters__checkbox_dorm">Helping in a dorm</string>
    <string name="fragment_main__filters__dorm_spinner_desc">Choose dorm</string>
    <string name="fragment_main__profile__username">Username</string>
    <string name="fragment_main__profile__usertag">Usertag</string>
    <string name="fragment_main__profile__geography">Geography</string>
    <string name="fragment_main__profile__description">Description</string>
    <string name="fragment_main__profile__settings__change_avatar">Choose a photo</string>
    <string name="fragment_main__profile__settings__username">Username</string>
    <string name="fragment_main__profile__settings__usertag">Usertag</string>
    <string name="fragment_main__profile__settings__geography">Geography</string>
    <string name="fragment_main__profile__settings__description">Description</string>
    <string name="fragment_main__profile__settings__description_hint">Change description</string>
    <string name="fragment_main__profile__settings__geography_hint">Choose dorm</string>
    <string name="fragment_main__user_services__new_service__rbOffer">I will help</string>
    <string name="fragment_main__user_services__new_service__rbRequest">Help me please</string>
    <string name="fragment_main__user_services__new_service__rbEvent">Event</string>
    <string name="fragment_main__service_info__type">Type</string>
    <string name="currency">Currency</string>
    <string name="fragment_auth__sign_in__password">Password</string>
    <string name="find_offer_or_request">Find offer or request</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>

    <string name="fragment_main__user_services__new_service__cgTags__cooking">Готовка</string>
    <string name="fragment_main__user_services__new_service__cgTags__study">Учёба</string>
    <string name="fragment_main__user_services__new_service__cgTags__event">Мероприятие</string>
    <string name="fragment_main__user_services__new_service__etTitle">Введите название</string>
    <string name="fragment_main__user_services__new_service__etDescription">Введите описание</string>
    <string name="fragment_main__user_services__new_service__etPrice">Введите цену</string>
    <string name="fragment_main__user_services__new_service__btnCreate">Создать</string>

    <string name="fragment_main__filters__btnCreate">Отфильтровать</string>
    <string name="new_service_text_btn">New</string>
    <string name="location">Location</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="contact_text">Contact</string>
    <string name="deadline">Deadline</string>
    <string name="offers_tab_title">Offers</string>
    <string name="requests_tab_title">Requests</string>
    <string name="fragment_main__user_services__new_service_type_tv">Type</string>
    <string name="fragment_main__user_services__new_service_title_tv">Title</string>
    <string name="fragment_main__user_services__new_service_title_ev">My title</string>
    <string name="fragment_main__user_services__new_service_price_tv">Price</string>
    <string name="fragment_main__user_services__new_service_desc_tv">Description</string>
    <string name="create_text">Create</string>
    <string name="fragment_main__user_services__new_service_deadlines_tv">Deadlines</string>
    <string name="fragment_main__user_services__new_service_head">New service</string>
    <string name="fragment_main__filters_title_tv">Filters</string>
    <string name="fragment_main__filters_price_tv">Price</string>
    <string name="fragment_main__filters__price_from_ev">From</string>
    <string name="fragment_main__filters__price_to_ev">To</string>
    <string name="fragment_main__filters_location_tv">Location</string>
    <string name="fragment_main__filters_tags_tv">Tags</string>
    <string name="add_text">Add</string>
    <string name="owner">Owner</string>
    <string name="title">Title</string>
    <string name="new_tag">New tag</string>
    <string name="apply">Apply</string>
    <string name="fragment_main__user_services__new_service_date_tv">Date</string>
    <string name="fragment_main_user_services__ok_btn">Ok</string>
    <string name="fragment_main_user_services__date_picker_head">Choose a date</string>
</resources>