<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".screens.auth.signup.SignUpFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_auth__sign_up__text"
        style="@style/AuthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_auth__sign_up__text"
        app:layout_constraintBottom_toTopOf="@id/fragment_auth__sign_up__nickname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fragment_auth__sign_up__nickname"
        style="@style/EditTextStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_auth__sign_up__username"
        app:layout_constraintBottom_toTopOf="@id/fragment_auth__sign_up__email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_up__text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fragment_auth__sign_up__email"
        style="@style/EditTextStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_auth__sign_up__email"
        app:layout_constraintBottom_toTopOf="@id/fragment_auth__sign_up__password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_up__nickname" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fragment_auth__sign_up__password"
        style="@style/EditTextStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/fragment_auth__sign_up__password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/fragment_auth__sign_up__button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_up__email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_auth__sign_up__button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/fragment_auth__sign_up__button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_up__password"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_auth__sign_up__link"
        style="@style/SmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/already_have_an_account_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_up__button"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>