<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    tools:context=".views.main.serviceinfo.ServiceInfoFragment">

    <TextView
        android:id="@+id/fragment_main__service_info__tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_main__user_services__new_service__etTitle__marginTop"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_main__service_info__tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_main__user_services__new_service__etDescription__marginTop"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main__service_info__tvTitle" />

    <TextView
        android:id="@+id/fragment_main__service_info__type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_main__service_info__type"
        android:layout_marginTop="@dimen/fragment_main__user_services__new_service__rg__marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main__service_info__tvDescription">

    </TextView>

    <TextView
        android:id="@+id/fragment_main__service_info__spnCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/currency"
        android:layout_marginTop="@dimen/fragment_main__user_services__new_service__spnCurrency__marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main__service_info__type" />


    <TextView
        android:id="@+id/fragment_main__service_info__etPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_main__user_services__new_service__etPrice__marginTop"
        android:hint="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_main__service_info__spnCurrency" />

    <TextView
        android:id="@+id/fragment_main__service_info__spnGeography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/frament_main__profile__geography"
        android:layout_marginTop="@dimen/fragment_main__user_services__new_service__spnGeography__marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main__service_info__etPrice" />

    <TextView
        android:id="@+id/fragment_main__service_info__etTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/tags"
        android:layout_margin="36dp"
        android:layout_marginTop="@dimen/fragment_main__user_services__new_service__etTags__marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main__service_info__spnGeography" />


</androidx.constraintlayout.widget.ConstraintLayout>