<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3"
        android:id="@+id/fragment_auth__sign_in__text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/fragment_auth__sign_in__text"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fragment_auth__sign_in__login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/fragment_auth__sign_in__login"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fragment_auth__sign_in__password"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_in__text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fragment_auth__sign_in__password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_in__login"
        app:layout_constraintBottom_toTopOf="@+id/fragment_auth__sign_in__button"
        android:hint="@string/fragment_auth__sign_in__password"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_auth__sign_in__button"
        android:hint="@string/fragment_auth__sign_in__password"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_auth__sign_in__password"
        app:layout_constaintBottom_toTopOf="@+id/fragment_auth__sign_in__link"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/fragment_auth__sign_in__button"
        android:textSize="25sp"
        android:textStyle="bold"
        />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_auth__sign_in__link"
        app:layout_constraintTop_toBottomOf="@+id/fragment_auth__sign_in__button"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/fragment_auth__sign_in__link"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
 />

</androidx.constraintlayout.widget.ConstraintLayout>